# Pseudo

./: Pseudo.code-workspace  Pseudo.sln  boot_image.ps1  makefile  qemu_args_prev.txt
Kernel/Core/: Core.vcxproj  Core.vcxproj.filters  main.c  makefile  script.ps1  stdio.c
Kernel/Core/dbg/: dbg.c
Kernel/Core/init/: bootgfx.c  bootgfx_prev.c  initstack.asm  preinit.c  zipread.c
Kernel/Core/ke/: lock.c
Kernel/Core/misc/: common.c
Kernel/Core/mm/: mminit.c  pool.c
Kernel/include/: Base.h  Compiler.h  Firmware.h  Macros.h
Kernel/include/Arch/: Arch.h
Kernel/include/Arch/x64/: Types.h  intrin64.h
Kernel/include/Ke/: ke.h  lock.h
Kernel/include/Mm/: pool.h
Kernel/include/dbg/: dbg.h
Kernel/include/init/: bootgfx.h  zip.h
OsLoader/EfiBoot/: BOOTx64.efi  EfiBoot.vcxproj  EfiBoot.vcxproj.filters  build_helper.bat
OsLoader/EfiBoot/DuetPkg/: DuetPkgX64.dsc  SetEnv_X64.bat
OsLoader/EfiBoot/Nt32Pkg/: Nt32Pkg.dsc
OsLoader/EfiBoot/OSLDR/: CAUTION.txt  OSLDR.c  OSLDR.code-workspace  OSLDR.h  OSLDR.inf  OsBootImage.c  OsKernel.c  OsMemory.c  PeImage.c  PeImage.h
OsLoader/EfiBootLite/: EfiBootLite.vcxproj  EfiBootLite.vcxproj.filters  OsKernel.c  OsLoader.h  OsMemory.c  PeImage.c  PeImage.h  SFormat.c  SFormat.h  UefiMain.c  oskernel.c  osloader.h  osmemory.c  uefimain.c
OsLoader/OsLoader/EfiBootLite/: efibootlite.sln  efibootlite.vcxproj  makefile  osloader.h  osmemory.c
OsLoader/Prototype/FonParser/: FonParser.sln  FonParser.vcxproj  FonParser.vcxproj.filters  fonparser.c
OsLoader/Prototype/PoolMemory/: PoolMemory.sln  PoolMemory.vcxproj  PoolMemory.vcxproj.filters  list.c  lock.c  lock.h  pool.c
OsLoader/Prototype/ZipImage/: ZipImage.sln  ZipImage.vcxproj  ZipImage.vcxproj.filters  zip.h  zip_reader.c  zip_writer.c
OsLoader/Prototype/ZipImage/Arch/: Arch.h
OsLoader/Prototype/ZipImage/Arch/x64/: Types.h
OsLoader/vsprintf/: SFormat.c  SFormat.h  SFormatU8.c  UefiTypes.h  test.c  vsprintf.sln  vsprintf.vcxproj  vsprintf.vcxproj.filters
Prorotype/Scheduler/: Scheduler.vcxproj  Scheduler.vcxproj.filters  list.cpp  main.cpp
Prototype/: Prototype.sln
Prototype/Scheduler/: Scheduler.vcxproj  Scheduler.vcxproj.filters  bintree.c  bintree.h  console.hpp  global.hpp  list.c  list.cpp  list.h  main.cpp  prototype_base.h  runner_q.c  runner_q.h  sched_base.c  sched_base.h  sched_normal.c  sched_normal.h  scheduler.hpp  spinlock.hpp  task.hpp  task_pool.hpp  test.c  types.h  vcpu.hpp  wait.c  wait.h  wall_clock.hpp
Source/Kernel/: CMakeLists.txt
Source/Kernel/Core/: main.c  stdio.c
Source/Kernel/Core/arch/: arch.h
Source/Kernel/Core/arch/x64/: Types.h  intrin64.h  processor.h
Source/Kernel/Core/base/: base.h  compiler.h  gerror.h  macros.h  osloader.h  stdarg.h  stdio.h
Source/Kernel/Core/dbg/: dbg.c  dbg.h
Source/Kernel/Core/drivers/builtin/: 8254pit.c  8254pit.h  8259pic.c  8259pic.h
Source/Kernel/Core/hal/: 8254pit.c  8254pit.h  8259pic.c  8259pic.h  acpi.c  acpi.h  apic.c  apic.h  apstub16.c  apstub16.h  halinit.c  halinit.h  hpet.c  hpet.h  ioapic.c  ioapic.h  processor.c  processor.h  ptimer.c  ptimer.h
Source/Kernel/Core/init/: acpi.c  acpi.h  bootgfx.c  bootgfx.h  init.c  preinit.c  preinit.h  zip.h  zipread.c
Source/Kernel/Core/ke/: interrupt.c  interrupt.h  inthandler.c  inthandler.h  irql.c  irql.h  ke.h  keinit.c  keinit.h  kprocessor.c  kprocessor.h  lock.c  lock.h  process.c  process.h  runner_q.c  runner_q.h  sched.c  sched.h  sched_base.c  sched_base.h  sched_normal.c  sched_normal.h  thread.c  thread.h  timer.c  timer.h  wait.c  wait.h
Source/Kernel/Core/misc/: bintree.c  bintree.h  common.c  common.h  list.c  list.h  misc.h  objpool.c  objpool.h
Source/Kernel/Core/mm/: mm.c  mm.h  mminit.c  mminit.h  paging.c  paging.h  pool.c  pool.h  xadtree.c  xadtree.h
Source/Kernel/include/: Base.h  Firmware.h  stdarg.h  stddef.h  stdio.h
Source/Kernel/include/Misc/: list.h
Source/Kernel/include/Mm/: mminit.h
Source/Kernel/include/init/: bootgfx.h
Source/OsLoader/: CMakeLists.txt
Source/OsLoader/EfiBootLite/: buildenv.cmd  makefile  osdebug.c  oskernel.c  osloader.h  osmemory.c  osmisc.c  ospeimage.c  peimage.c  sformat.c  uefimain.c
Source/OsLoader/EfiBootLite/loader/: osdebug.h  oskernel.h  osloader.h  osmemory.h  osmisc.h  ospeimage.h
TestExec/: CMakeLists.txt  boot_image.ps1  gdb_init_options.txt  makefile
TestExec/Filesystem/EFI/BOOT/init/: font-license.txt
TestExec/OVMF/ovmf-x64/: OVMF-need-smm.fd  OVMF_CODE-need-smm.fd  OVMF_CODE-with-csm.fd  UefiShell.iso
TestExec/QEMU/: boot.bat  qemu-doc.html
TestRun/: TestRun.vcxproj
Utility/: Utility.sln
Utility/BootImage/: BootImage.c  BootImage.h  BootImage.sln  BootImage.vcxproj.filters
Utility/FATWriter/: FATWriter.vcxproj  FATWriter.vcxproj.filters  crc.c  crc.h  device.h  fat.c  fat.h  gpt.c  gpt.h  main.c  script.txt
Utility/Tools/: Tools.sln
Utility/Tools/Pipe/: Pipe.vcxproj  Pipe.vcxproj.filters  pipe.c
Utility/Tools/vhd_setuuid/: main.cpp  vhd_setuuid.vcxproj
Utility/nbuildinc/: build.h  main.c  nbuildinc.sln  nbuildinc.vcxproj
Utility/pipe_logger/: pipe_logger.c  pipe_logger.sln  pipe_logger.vcxproj  pipe_logger.vcxproj.filters
Utils/BootImage/: Arch.h  BootImage.vcxproj  Macros.h  Types.h  main.c
VM/: boot_image.bat
VM/Filesystem/EFI/BOOT/: BOOTx64.efi  Core.sys
VM/OVMF/ovmf-x64/: OVMF-pure-efi.fd  OVMF-with-csm.fd  OVMF_CODE-pure-efi.fd
