
# Require a minimum version of CMake.
cmake_minimum_required(VERSION 3.0.0)

# Set our project name and version.
project(
    Osloader
    VERSION 0.1.0
    LANGUAGES C)

# Our output file name.
set(TARGET_NAME BOOTx64)        # Output file name
set(TARGET_EXTENSION .efi)      # Output file extension

# List our source files.
set(SRC_LIST
    # root
    EfiBootLite/oskernel.c
    EfiBootLite/osmemory.c
    EfiBootLite/peimage.c
    EfiBootLite/sformat.c
    EfiBootLite/uefimain.c
    EfiBootLite/loader/osloader.h
    EfiBootLite/loader/peimage.h
    EfiBootLite/loader/sformat.h
    # headers in UEFI package.
    EfiBootLite/include/base.h
    EfiBootLite/include/pidxe.h
    EfiBootLite/include/pimm.h
    EfiBootLite/include/pipei.h
    EfiBootLite/include/pismm.h
    EfiBootLite/include/uefi.h
    EfiBootLite/include/aarch64/processorbind.h
    EfiBootLite/include/arm/processorbind.h
    EfiBootLite/include/ebc/processorbind.h
    EfiBootLite/include/guid/acpi.h
    EfiBootLite/include/guid/apriori.h
    EfiBootLite/include/guid/apriorifilename.h
    EfiBootLite/include/guid/btt.h
    EfiBootLite/include/guid/capsulereport.h
    EfiBootLite/include/guid/cper.h
    EfiBootLite/include/guid/debugimageinfotable.h
    EfiBootLite/include/guid/dxeservices.h
    EfiBootLite/include/guid/eventgroup.h
    EfiBootLite/include/guid/eventlegacybios.h
    EfiBootLite/include/guid/fileinfo.h
    EfiBootLite/include/guid/filesysteminfo.h
    EfiBootLite/include/guid/filesystemvolumelabelinfo.h
    EfiBootLite/include/guid/firmwarecontentssigned.h
    EfiBootLite/include/guid/firmwarefilesystem2.h
    EfiBootLite/include/guid/firmwarefilesystem3.h
    EfiBootLite/include/guid/fmpcapsule.h
    EfiBootLite/include/guid/globalvariable.h
    EfiBootLite/include/guid/gpt.h
    EfiBootLite/include/guid/graphicsinfohob.h
    EfiBootLite/include/guid/hardwareerrorvariable.h
    EfiBootLite/include/guid/hiiformmapmethodguid.h
    EfiBootLite/include/guid/hiikeyboardlayout.h
    EfiBootLite/include/guid/hiiplatformsetupformset.h
    EfiBootLite/include/guid/hoblist.h
    EfiBootLite/include/guid/imageauthentication.h
    EfiBootLite/include/guid/mdepkgtokenspace.h
    EfiBootLite/include/guid/memoryallocationhob.h
    EfiBootLite/include/guid/memoryattributestable.h
    EfiBootLite/include/guid/memoryoverwritecontrol.h
    EfiBootLite/include/guid/mps.h
    EfiBootLite/include/guid/pcansi.h
    EfiBootLite/include/guid/propertiestable.h
    EfiBootLite/include/guid/salsystemtable.h
    EfiBootLite/include/guid/smbios.h
    EfiBootLite/include/guid/statuscodedatatypeid.h
    EfiBootLite/include/guid/systemresourcetable.h
    EfiBootLite/include/guid/vectorhandofftable.h
    EfiBootLite/include/guid/wincertificate.h
    EfiBootLite/include/ia32/processorbind.h
    EfiBootLite/include/industrystandard/acpi.h
    EfiBootLite/include/industrystandard/acpi10.h
    EfiBootLite/include/industrystandard/acpi20.h
    EfiBootLite/include/industrystandard/acpi30.h
    EfiBootLite/include/industrystandard/acpi40.h
    EfiBootLite/include/industrystandard/acpi50.h
    EfiBootLite/include/industrystandard/acpi51.h
    EfiBootLite/include/industrystandard/acpi60.h
    EfiBootLite/include/industrystandard/acpi61.h
    EfiBootLite/include/industrystandard/acpi62.h
    EfiBootLite/include/industrystandard/acpiaml.h
    EfiBootLite/include/industrystandard/alertstandardformattable.h
    EfiBootLite/include/industrystandard/atapi.h
    EfiBootLite/include/industrystandard/bluetooth.h
    EfiBootLite/include/industrystandard/bmp.h
    EfiBootLite/include/industrystandard/debugport2table.h
    EfiBootLite/include/industrystandard/debugporttable.h
    EfiBootLite/include/industrystandard/dhcp.h
    EfiBootLite/include/industrystandard/dmaremappingreportingtable.h
    EfiBootLite/include/industrystandard/eltorito.h
    EfiBootLite/include/industrystandard/emmc.h
    EfiBootLite/include/industrystandard/highprecisioneventtimertable.h
    EfiBootLite/include/industrystandard/hsti.h
    EfiBootLite/include/industrystandard/http11.h
    EfiBootLite/include/industrystandard/ioremappingtable.h
    EfiBootLite/include/industrystandard/ipmi.h
    EfiBootLite/include/industrystandard/ipminetfnapp.h
    EfiBootLite/include/industrystandard/ipminetfnbridge.h
    EfiBootLite/include/industrystandard/ipminetfnchassis.h
    EfiBootLite/include/industrystandard/ipminetfnfirmware.h
    EfiBootLite/include/industrystandard/ipminetfngroupextension.h
    EfiBootLite/include/industrystandard/ipminetfnsensorevent.h
    EfiBootLite/include/industrystandard/ipminetfnstorage.h
    EfiBootLite/include/industrystandard/ipminetfntransport.h
    EfiBootLite/include/industrystandard/iscsibootfirmwaretable.h
    EfiBootLite/include/industrystandard/legacybiosmptable.h
    EfiBootLite/include/industrystandard/lowpoweridletable.h
    EfiBootLite/include/industrystandard/mbr.h
    EfiBootLite/include/industrystandard/memorymappedconfigurationspaceaccesstable.h
    EfiBootLite/include/industrystandard/memoryoverwriterequestcontrollock.h
    EfiBootLite/include/industrystandard/nvme.h
    EfiBootLite/include/industrystandard/pal.h
    EfiBootLite/include/industrystandard/pci.h
    EfiBootLite/include/industrystandard/pci22.h
    EfiBootLite/include/industrystandard/pci23.h
    EfiBootLite/include/industrystandard/pci30.h
    EfiBootLite/include/industrystandard/pcicodeid.h
    EfiBootLite/include/industrystandard/pciexpress21.h
    EfiBootLite/include/industrystandard/pciexpress30.h
    EfiBootLite/include/industrystandard/pciexpress31.h
    EfiBootLite/include/industrystandard/peimage.h
    EfiBootLite/include/industrystandard/sal.h
    EfiBootLite/include/industrystandard/scsi.h
    EfiBootLite/include/industrystandard/sd.h
    EfiBootLite/include/industrystandard/sdramspd.h
    EfiBootLite/include/industrystandard/sdramspdddr3.h
    EfiBootLite/include/industrystandard/sdramspdddr4.h
    EfiBootLite/include/industrystandard/sdramspdlpddr.h
    EfiBootLite/include/industrystandard/serialportconsoleredirectiontable.h
    EfiBootLite/include/industrystandard/smbios.h
    EfiBootLite/include/industrystandard/smbus.h
    EfiBootLite/include/industrystandard/tcgphysicalpresence.h
    EfiBootLite/include/industrystandard/tcgstoragecore.h
    EfiBootLite/include/industrystandard/tcgstorageopal.h
    EfiBootLite/include/industrystandard/tcpaacpi.h
    EfiBootLite/include/industrystandard/tls1.h
    EfiBootLite/include/industrystandard/tpm12.h
    EfiBootLite/include/industrystandard/tpm20.h
    EfiBootLite/include/industrystandard/tpm2acpi.h
    EfiBootLite/include/industrystandard/tpmptp.h
    EfiBootLite/include/industrystandard/tpmtis.h
    EfiBootLite/include/industrystandard/uefitcgplatform.h
    EfiBootLite/include/industrystandard/usb.h
    EfiBootLite/include/industrystandard/watchdogactiontable.h
    EfiBootLite/include/industrystandard/watchdogresourcetable.h
    EfiBootLite/include/industrystandard/windowssmmsecuritymitigationtable.h
    EfiBootLite/include/industrystandard/windowsuxcapsule.h
    EfiBootLite/include/ipf/processorbind.h
    EfiBootLite/include/library/baselib.h
    EfiBootLite/include/library/basememorylib.h
    EfiBootLite/include/library/cachemaintenancelib.h
    EfiBootLite/include/library/cpulib.h
    EfiBootLite/include/library/debuglib.h
    EfiBootLite/include/library/debugprinterrorlevellib.h
    EfiBootLite/include/library/devicepathlib.h
    EfiBootLite/include/library/dxecoreentrypoint.h
    EfiBootLite/include/library/dxeserviceslib.h
    EfiBootLite/include/library/dxeservicestablelib.h
    EfiBootLite/include/library/extendedsallib.h
    EfiBootLite/include/library/extractguidedsectionlib.h
    EfiBootLite/include/library/filehandlelib.h
    EfiBootLite/include/library/hoblib.h
    EfiBootLite/include/library/hstilib.h
    EfiBootLite/include/library/iolib.h
    EfiBootLite/include/library/memoryallocationlib.h
    EfiBootLite/include/library/orderedcollectionlib.h
    EfiBootLite/include/library/pallib.h
    EfiBootLite/include/library/pcdlib.h
    EfiBootLite/include/library/pcicf8lib.h
    EfiBootLite/include/library/pciexpresslib.h
    EfiBootLite/include/library/pcilib.h
    EfiBootLite/include/library/pcisegmentinfolib.h
    EfiBootLite/include/library/pcisegmentlib.h
    EfiBootLite/include/library/pecoffextraactionlib.h
    EfiBootLite/include/library/pecoffgetentrypointlib.h
    EfiBootLite/include/library/pecofflib.h
    EfiBootLite/include/library/peicoreentrypoint.h
    EfiBootLite/include/library/peimentrypoint.h
    EfiBootLite/include/library/peiserviceslib.h
    EfiBootLite/include/library/peiservicestablepointerlib.h
    EfiBootLite/include/library/performancelib.h
    EfiBootLite/include/library/postcodelib.h
    EfiBootLite/include/library/printlib.h
    EfiBootLite/include/library/reportstatuscodelib.h
    EfiBootLite/include/library/resourcepublicationlib.h
    EfiBootLite/include/library/rnglib.h
    EfiBootLite/include/library/s3bootscriptlib.h
    EfiBootLite/include/library/s3iolib.h
    EfiBootLite/include/library/s3pcilib.h
    EfiBootLite/include/library/s3pcisegmentlib.h
    EfiBootLite/include/library/s3smbuslib.h
    EfiBootLite/include/library/s3stalllib.h
    EfiBootLite/include/library/sallib.h
    EfiBootLite/include/library/serialportlib.h
    EfiBootLite/include/library/smbuslib.h
    EfiBootLite/include/library/smihandlerprofilelib.h
    EfiBootLite/include/library/smmiolib.h
    EfiBootLite/include/library/smmlib.h
    EfiBootLite/include/library/smmmemlib.h
    EfiBootLite/include/library/smmperiodicsmilib.h
    EfiBootLite/include/library/smmservicestablelib.h
    EfiBootLite/include/library/synchronizationlib.h
    EfiBootLite/include/library/timerlib.h
    EfiBootLite/include/library/uefiapplicationentrypoint.h
    EfiBootLite/include/library/uefibootservicestablelib.h
    EfiBootLite/include/library/uefidecompresslib.h
    EfiBootLite/include/library/uefidriverentrypoint.h
    EfiBootLite/include/library/uefilib.h
    EfiBootLite/include/library/uefiruntimelib.h
    EfiBootLite/include/library/uefiruntimeservicestablelib.h
    EfiBootLite/include/library/uefiscsilib.h
    EfiBootLite/include/library/uefiusblib.h
    EfiBootLite/include/pi/pibootmode.h
    EfiBootLite/include/pi/pidependency.h
    EfiBootLite/include/pi/pidxecis.h
    EfiBootLite/include/pi/pifirmwarefile.h
    EfiBootLite/include/pi/pifirmwarevolume.h
    EfiBootLite/include/pi/pihob.h
    EfiBootLite/include/pi/pii2c.h
    EfiBootLite/include/pi/pimmcis.h
    EfiBootLite/include/pi/pimultiphase.h
    EfiBootLite/include/pi/pipeicis.h
    EfiBootLite/include/pi/pis3bootscript.h
    EfiBootLite/include/pi/pismmcis.h
    EfiBootLite/include/pi/pistatuscode.h
    EfiBootLite/include/ppi/blockio.h
    EfiBootLite/include/ppi/blockio2.h
    EfiBootLite/include/ppi/bootinrecoverymode.h
    EfiBootLite/include/ppi/capsule.h
    EfiBootLite/include/ppi/cpuio.h
    EfiBootLite/include/ppi/decompress.h
    EfiBootLite/include/ppi/devicerecoverymodule.h
    EfiBootLite/include/ppi/dxeipl.h
    EfiBootLite/include/ppi/endofpeiphase.h
    EfiBootLite/include/ppi/firmwarevolume.h
    EfiBootLite/include/ppi/firmwarevolumeinfo.h
    EfiBootLite/include/ppi/firmwarevolumeinfo2.h
    EfiBootLite/include/ppi/graphics.h
    EfiBootLite/include/ppi/guidedsectionextraction.h
    EfiBootLite/include/ppi/i2cmaster.h
    EfiBootLite/include/ppi/isahc.h
    EfiBootLite/include/ppi/loadfile.h
    EfiBootLite/include/ppi/loadimage.h
    EfiBootLite/include/ppi/masterbootmode.h
    EfiBootLite/include/ppi/memorydiscovered.h
    EfiBootLite/include/ppi/mpservices.h
    EfiBootLite/include/ppi/pcd.h
    EfiBootLite/include/ppi/pcdinfo.h
    EfiBootLite/include/ppi/pcicfg2.h
    EfiBootLite/include/ppi/pipcd.h
    EfiBootLite/include/ppi/pipcdinfo.h
    EfiBootLite/include/ppi/readonlyvariable2.h
    EfiBootLite/include/ppi/recoverymodule.h
    EfiBootLite/include/ppi/reportstatuscodehandler.h
    EfiBootLite/include/ppi/reset.h
    EfiBootLite/include/ppi/reset2.h
    EfiBootLite/include/ppi/s3resume2.h
    EfiBootLite/include/ppi/sechobdata.h
    EfiBootLite/include/ppi/secplatforminformation.h
    EfiBootLite/include/ppi/secplatforminformation2.h
    EfiBootLite/include/ppi/security2.h
    EfiBootLite/include/ppi/smbus2.h
    EfiBootLite/include/ppi/stall.h
    EfiBootLite/include/ppi/statuscode.h
    EfiBootLite/include/ppi/superio.h
    EfiBootLite/include/ppi/temporaryramdone.h
    EfiBootLite/include/ppi/temporaryramsupport.h
    EfiBootLite/include/ppi/vectorhandoffinfo.h
    EfiBootLite/include/protocol/absolutepointer.h
    EfiBootLite/include/protocol/acpisystemdescriptiontable.h
    EfiBootLite/include/protocol/acpitable.h
    EfiBootLite/include/protocol/adapterinformation.h
    EfiBootLite/include/protocol/arp.h
    EfiBootLite/include/protocol/atapassthru.h
    EfiBootLite/include/protocol/authenticationinfo.h
    EfiBootLite/include/protocol/bds.h
    EfiBootLite/include/protocol/bis.h
    EfiBootLite/include/protocol/blockio.h
    EfiBootLite/include/protocol/blockio2.h
    EfiBootLite/include/protocol/blockiocrypto.h
    EfiBootLite/include/protocol/bluetoothattribute.h
    EfiBootLite/include/protocol/bluetoothconfig.h
    EfiBootLite/include/protocol/bluetoothhc.h
    EfiBootLite/include/protocol/bluetoothio.h
    EfiBootLite/include/protocol/bluetoothleconfig.h
    EfiBootLite/include/protocol/bootmanagerpolicy.h
    EfiBootLite/include/protocol/busspecificdriveroverride.h
    EfiBootLite/include/protocol/capsule.h
    EfiBootLite/include/protocol/componentname.h
    EfiBootLite/include/protocol/componentname2.h
    EfiBootLite/include/protocol/cpu.h
    EfiBootLite/include/protocol/cpuio2.h
    EfiBootLite/include/protocol/debugport.h
    EfiBootLite/include/protocol/debugsupport.h
    EfiBootLite/include/protocol/decompress.h
    EfiBootLite/include/protocol/deferredimageload.h
    EfiBootLite/include/protocol/deviceio.h
    EfiBootLite/include/protocol/devicepath.h
    EfiBootLite/include/protocol/devicepathfromtext.h
    EfiBootLite/include/protocol/devicepathtotext.h
    EfiBootLite/include/protocol/devicepathutilities.h
    EfiBootLite/include/protocol/dhcp4.h
    EfiBootLite/include/protocol/dhcp6.h
    EfiBootLite/include/protocol/diskinfo.h
    EfiBootLite/include/protocol/diskio.h
    EfiBootLite/include/protocol/diskio2.h
    EfiBootLite/include/protocol/dns4.h
    EfiBootLite/include/protocol/dns6.h
    EfiBootLite/include/protocol/driverbinding.h
    EfiBootLite/include/protocol/driverconfiguration.h
    EfiBootLite/include/protocol/driverconfiguration2.h
    EfiBootLite/include/protocol/driverdiagnostics.h
    EfiBootLite/include/protocol/driverdiagnostics2.h
    EfiBootLite/include/protocol/driverfamilyoverride.h
    EfiBootLite/include/protocol/driverhealth.h
    EfiBootLite/include/protocol/driversupportedefiversion.h
    EfiBootLite/include/protocol/dxemmreadytolock.h
    EfiBootLite/include/protocol/dxesmmreadytolock.h
    EfiBootLite/include/protocol/eap.h
    EfiBootLite/include/protocol/eapconfiguration.h
    EfiBootLite/include/protocol/eapmanagement.h
    EfiBootLite/include/protocol/eapmanagement2.h
    EfiBootLite/include/protocol/ebc.h
    EfiBootLite/include/protocol/edidactive.h
    EfiBootLite/include/protocol/ediddiscovered.h
    EfiBootLite/include/protocol/edidoverride.h
    EfiBootLite/include/protocol/eraseblock.h
    EfiBootLite/include/protocol/extendedsalbootservice.h
    EfiBootLite/include/protocol/extendedsalserviceclasses.h
    EfiBootLite/include/protocol/firmwaremanagement.h
    EfiBootLite/include/protocol/firmwarevolume2.h
    EfiBootLite/include/protocol/firmwarevolumeblock.h
    EfiBootLite/include/protocol/formbrowser2.h
    EfiBootLite/include/protocol/ftp4.h
    EfiBootLite/include/protocol/graphicsoutput.h
    EfiBootLite/include/protocol/guidedsectionextraction.h
    EfiBootLite/include/protocol/hash.h
    EfiBootLite/include/protocol/hash2.h
    EfiBootLite/include/protocol/hiiconfigaccess.h
    EfiBootLite/include/protocol/hiiconfigkeyword.h
    EfiBootLite/include/protocol/hiiconfigrouting.h
    EfiBootLite/include/protocol/hiidatabase.h
    EfiBootLite/include/protocol/hiifont.h
    EfiBootLite/include/protocol/hiiimage.h
    EfiBootLite/include/protocol/hiiimagedecoder.h
    EfiBootLite/include/protocol/hiiimageex.h
    EfiBootLite/include/protocol/hiipackagelist.h
    EfiBootLite/include/protocol/hiipopup.h
    EfiBootLite/include/protocol/hiistring.h
    EfiBootLite/include/protocol/http.h
    EfiBootLite/include/protocol/httpbootcallback.h
    EfiBootLite/include/protocol/httputilities.h
    EfiBootLite/include/protocol/i2cbusconfigurationmanagement.h
    EfiBootLite/include/protocol/i2cenumerate.h
    EfiBootLite/include/protocol/i2chost.h
    EfiBootLite/include/protocol/i2cio.h
    EfiBootLite/include/protocol/i2cmaster.h
    EfiBootLite/include/protocol/idecontrollerinit.h
    EfiBootLite/include/protocol/incompatiblepcidevicesupport.h
    EfiBootLite/include/protocol/ip4.h
    EfiBootLite/include/protocol/ip4config.h
    EfiBootLite/include/protocol/ip4config2.h
    EfiBootLite/include/protocol/ip6.h
    EfiBootLite/include/protocol/ip6config.h
    EfiBootLite/include/protocol/ipsec.h
    EfiBootLite/include/protocol/ipsecconfig.h
    EfiBootLite/include/protocol/isahc.h
    EfiBootLite/include/protocol/iscsiinitiatorname.h
    EfiBootLite/include/protocol/kms.h
    EfiBootLite/include/protocol/legacyregion2.h
    EfiBootLite/include/protocol/legacyspicontroller.h
    EfiBootLite/include/protocol/legacyspiflash.h
    EfiBootLite/include/protocol/legacyspismmcontroller.h
    EfiBootLite/include/protocol/legacyspismmflash.h
    EfiBootLite/include/protocol/loadedimage.h
    EfiBootLite/include/protocol/loadfile.h
    EfiBootLite/include/protocol/loadfile2.h
    EfiBootLite/include/protocol/managednetwork.h
    EfiBootLite/include/protocol/mcainitpmi.h
    EfiBootLite/include/protocol/metronome.h
    EfiBootLite/include/protocol/mmaccess.h
    EfiBootLite/include/protocol/mmbase.h
    EfiBootLite/include/protocol/mmcommunication.h
    EfiBootLite/include/protocol/mmconfiguration.h
    EfiBootLite/include/protocol/mmcontrol.h
    EfiBootLite/include/protocol/mmcpu.h
    EfiBootLite/include/protocol/mmcpuio.h
    EfiBootLite/include/protocol/mmendofdxe.h
    EfiBootLite/include/protocol/mmgpidispatch.h
    EfiBootLite/include/protocol/mmiotrapdispatch.h
    EfiBootLite/include/protocol/mmpcirootbridgeio.h
    EfiBootLite/include/protocol/mmperiodictimerdispatch.h
    EfiBootLite/include/protocol/mmpowerbuttondispatch.h
    EfiBootLite/include/protocol/mmreadytolock.h
    EfiBootLite/include/protocol/mmreportstatuscodehandler.h
    EfiBootLite/include/protocol/mmstandbybuttondispatch.h
    EfiBootLite/include/protocol/mmstatuscode.h
    EfiBootLite/include/protocol/mmswdispatch.h
    EfiBootLite/include/protocol/mmsxdispatch.h
    EfiBootLite/include/protocol/mmusbdispatch.h
    EfiBootLite/include/protocol/monotoniccounter.h
    EfiBootLite/include/protocol/mpservice.h
    EfiBootLite/include/protocol/mtftp4.h
    EfiBootLite/include/protocol/mtftp6.h
    EfiBootLite/include/protocol/networkinterfaceidentifier.h
    EfiBootLite/include/protocol/nvdimmlabel.h
    EfiBootLite/include/protocol/nvmexpresspassthru.h
    EfiBootLite/include/protocol/partitioninfo.h
    EfiBootLite/include/protocol/pcd.h
    EfiBootLite/include/protocol/pcdinfo.h
    EfiBootLite/include/protocol/pcienumerationcomplete.h
    EfiBootLite/include/protocol/pcihostbridgeresourceallocation.h
    EfiBootLite/include/protocol/pcihotpluginit.h
    EfiBootLite/include/protocol/pcihotplugrequest.h
    EfiBootLite/include/protocol/pciio.h
    EfiBootLite/include/protocol/pcioverride.h
    EfiBootLite/include/protocol/pciplatform.h
    EfiBootLite/include/protocol/pcirootbridgeio.h
    EfiBootLite/include/protocol/pipcd.h
    EfiBootLite/include/protocol/pipcdinfo.h
    EfiBootLite/include/protocol/pkcs7verify.h
    EfiBootLite/include/protocol/platformdriveroverride.h
    EfiBootLite/include/protocol/platformtodriverconfiguration.h
    EfiBootLite/include/protocol/pxebasecode.h
    EfiBootLite/include/protocol/pxebasecodecallback.h
    EfiBootLite/include/protocol/ramdisk.h
    EfiBootLite/include/protocol/realtimeclock.h
    EfiBootLite/include/protocol/regularexpressionprotocol.h
    EfiBootLite/include/protocol/reportstatuscodehandler.h
    EfiBootLite/include/protocol/reset.h
    EfiBootLite/include/protocol/resetnotification.h
    EfiBootLite/include/protocol/rest.h
    EfiBootLite/include/protocol/rng.h
    EfiBootLite/include/protocol/runtime.h
    EfiBootLite/include/protocol/s3savestate.h
    EfiBootLite/include/protocol/s3smmsavestate.h
    EfiBootLite/include/protocol/scsiio.h
    EfiBootLite/include/protocol/scsipassthru.h
    EfiBootLite/include/protocol/scsipassthruext.h
    EfiBootLite/include/protocol/sdmmcpassthru.h
    EfiBootLite/include/protocol/security.h
    EfiBootLite/include/protocol/security2.h
    EfiBootLite/include/protocol/securitypolicy.h
    EfiBootLite/include/protocol/serialio.h
    EfiBootLite/include/protocol/servicebinding.h
    EfiBootLite/include/protocol/shell.h
    EfiBootLite/include/protocol/shelldynamiccommand.h
    EfiBootLite/include/protocol/shellparameters.h
    EfiBootLite/include/protocol/simplefilesystem.h
    EfiBootLite/include/protocol/simplenetwork.h
    EfiBootLite/include/protocol/simplepointer.h
    EfiBootLite/include/protocol/simpletextin.h
    EfiBootLite/include/protocol/simpletextinex.h
    EfiBootLite/include/protocol/simpletextout.h
    EfiBootLite/include/protocol/smartcardedge.h
    EfiBootLite/include/protocol/smartcardreader.h
    EfiBootLite/include/protocol/smbios.h
    EfiBootLite/include/protocol/smbushc.h
    EfiBootLite/include/protocol/smmaccess2.h
    EfiBootLite/include/protocol/smmbase2.h
    EfiBootLite/include/protocol/smmcommunication.h
    EfiBootLite/include/protocol/smmconfiguration.h
    EfiBootLite/include/protocol/smmcontrol2.h
    EfiBootLite/include/protocol/smmcpu.h
    EfiBootLite/include/protocol/smmcpuio2.h
    EfiBootLite/include/protocol/smmendofdxe.h
    EfiBootLite/include/protocol/smmgpidispatch2.h
    EfiBootLite/include/protocol/smmiotrapdispatch2.h
    EfiBootLite/include/protocol/smmpcirootbridgeio.h
    EfiBootLite/include/protocol/smmperiodictimerdispatch2.h
    EfiBootLite/include/protocol/smmpowerbuttondispatch2.h
    EfiBootLite/include/protocol/smmreadytolock.h
    EfiBootLite/include/protocol/smmreportstatuscodehandler.h
    EfiBootLite/include/protocol/smmstandbybuttondispatch2.h
    EfiBootLite/include/protocol/smmstatuscode.h
    EfiBootLite/include/protocol/smmswdispatch2.h
    EfiBootLite/include/protocol/smmsxdispatch2.h
    EfiBootLite/include/protocol/smmusbdispatch2.h
    EfiBootLite/include/protocol/spiconfiguration.h
    EfiBootLite/include/protocol/spihc.h
    EfiBootLite/include/protocol/spiio.h
    EfiBootLite/include/protocol/spinorflash.h
    EfiBootLite/include/protocol/spismmconfiguration.h
    EfiBootLite/include/protocol/spismmhc.h
    EfiBootLite/include/protocol/spismmnorflash.h
    EfiBootLite/include/protocol/statuscode.h
    EfiBootLite/include/protocol/storagesecuritycommand.h
    EfiBootLite/include/protocol/superio.h
    EfiBootLite/include/protocol/superiocontrol.h
    EfiBootLite/include/protocol/supplicant.h
    EfiBootLite/include/protocol/tapeio.h
    EfiBootLite/include/protocol/tcg2protocol.h
    EfiBootLite/include/protocol/tcgservice.h
    EfiBootLite/include/protocol/tcp4.h
    EfiBootLite/include/protocol/tcp6.h
    EfiBootLite/include/protocol/timer.h
    EfiBootLite/include/protocol/timestamp.h
    EfiBootLite/include/protocol/tls.h
    EfiBootLite/include/protocol/tlsconfig.h
    EfiBootLite/include/protocol/treeprotocol.h
    EfiBootLite/include/protocol/udp4.h
    EfiBootLite/include/protocol/udp6.h
    EfiBootLite/include/protocol/ufsdeviceconfig.h
    EfiBootLite/include/protocol/ugadraw.h
    EfiBootLite/include/protocol/ugaio.h
    EfiBootLite/include/protocol/unicodecollation.h
    EfiBootLite/include/protocol/usb2hostcontroller.h
    EfiBootLite/include/protocol/usbfunctionio.h
    EfiBootLite/include/protocol/usbhostcontroller.h
    EfiBootLite/include/protocol/usbio.h
    EfiBootLite/include/protocol/usercredential.h
    EfiBootLite/include/protocol/usercredential2.h
    EfiBootLite/include/protocol/usermanager.h
    EfiBootLite/include/protocol/variable.h
    EfiBootLite/include/protocol/variablewrite.h
    EfiBootLite/include/protocol/vlanconfig.h
    EfiBootLite/include/protocol/watchdogtimer.h
    EfiBootLite/include/protocol/wifi.h
    EfiBootLite/include/protocol/wifi2.h
    EfiBootLite/include/uefi/uefiacpidatatable.h
    EfiBootLite/include/uefi/uefibasetype.h
    EfiBootLite/include/uefi/uefigpt.h
    EfiBootLite/include/uefi/uefiinternalformrepresentation.h
    EfiBootLite/include/uefi/uefimultiphase.h
    EfiBootLite/include/uefi/uefispec.h
    EfiBootLite/include/uefi/uefipxe.h
    EfiBootLite/include/x64/processorbind.h
)

# Add include directory. (./EfiBootLite/include)
include_directories(${CMAKE_CURRENT_LIST_DIR}/EfiBootLite/include)
include_directories(${CMAKE_CURRENT_LIST_DIR}/EfiBootLite/include/x64)
include_directories(${CMAKE_CURRENT_LIST_DIR}/EfiBootLite/loader)

# Our Osloader executable must have name "BOOTx64.efi".
add_executable(${PROJECT_NAME} ${SRC_LIST})
set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME ${TARGET_NAME})
set_target_properties(${PROJECT_NAME} PROPERTIES SUFFIX ${TARGET_EXTENSION})

# Compile options.
# NOTE : add -pedantic option to see warnings if you want.
target_compile_options(
    ${PROJECT_NAME} BEFORE
    PRIVATE -O3 -masm=intel -fstack-check=no -nostdinc -nodefaultlibs -nostdlib -ffreestanding -lgcc -lmsvcrt -g -std=c11)
#    PRIVATE -O3 -masm=intel -fstack-check=no -nostdinc -nodefaultlibs -nostdlib -ffreestanding -lgcc -lmsvcrt -g -pedantic -std=c11)

# Link options.
# UEFI application (Base=0x200000, Subsystem=UEFIApplication, EntryPoint=UefiMain)
target_link_options(
    ${PROJECT_NAME}
    PRIVATE -Wl,--dll,--shared,--exclude-all-symbols,--image-base,0x200000,--dynamicbase,--subsystem,10,-eUefiMain -fstack-check=no -nodefaultlibs -nostdlib)

# Generate assembly listings.
add_custom_command(
    TARGET ${PROJECT_NAME}
    POST_BUILD
    COMMAND objdump -S ${TARGET_NAME}${TARGET_EXTENSION} -M x86-64,intel > ${TARGET_NAME}${TARGET_EXTENSION}_dump.s
    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
    COMMENT "Generating assembly listing for ${TARGET_NAME}${TARGET_EXTENSION} ..."
    VERBATIM)

